--- a/07-tic-tac-toe-starting-project/src/index.css
+++ b/07-tic-tac-toe-starting-project/src/index.css
@@ -64,7 +64,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 #players li {
@@ -109,7 +109,7 @@ h1 {
 
 .player-name {
   display: inline-block;
-  width: 10rem;
+  width: 5rem;
   font-size: 1rem;
   color: #e1dec7;
   text-transform: uppercase;
@@ -123,7 +123,7 @@ h1 {
 .player input {
   font: inherit;
   font-size: 1rem;
-  width: 10rem;
+  width: 5rem;
   border: none;
   padding: 0.5rem;
   animation: pulse-text 2s infinite;
@@ -350,7 +350,14 @@ ol {
   }
 }
 
-@media only screen and (max-width: 527) {
-
+@media only screen and (max-width: 527px) {
+  .player {
+    border: 2px solid transparent;
+    padding: 0.5rem;
+    border-radius: 4px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+  }
 
 }
